--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
     font-weight: 500;
     line-height: 1.5;
     color: #555;
-    background-color: #fdfcf1;
+    background-color: #37536e;
 }
 body .header{
     z-index: 0;
@@ -24,43 +24,41 @@ body .header{
     width: 95vw;
     margin: 2.5vw;
     height: 100vh;
-    background-image: linear-gradient(to right bottom, rgba(0, 255, 255, 0.9), rgba(142, 255, 221, 0.6));
-    clip-path: polygon(0% 0%, 100% 0%, 100% 70%, 100% 100%, 0% 70% );
+    background-image: url('https://www.halt.org/wp-content/uploads/2019/06/5-Key-Reasons-Why-Lawyers-Should-Learn-How-to-Code.jpg');
+    clip-path: polygon(0% 0%, 100% 0%, 100% 70%, 100% 100%, 0% 90% );
     /*-webkit-clip-path: */
 }
 .header > h1 {
     width: calc(80vw);
     text-align: center;
     position: absolute;
-    top: 35%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: orange;
+    color: rgb(110, 147, 185);
     font-weight: 900;
     font-size: 4.5rem;
-    background-color: rgba(167, 255, 245, 0.4);
     border-radius: 25%;
-    box-shadow: 1rem 2rem 4rem aqua;
+    box-shadow: 1rem 2rem 4rem black;
 }
 .header > .navigation{
     display: flex;
     flex-direction: column;
+    background-color: black;
 }
 .header > .navigation > ul {
     display: flex;
     justify-content: space-between;
     list-style: none;
     width: calc(80vw);
-    background-color: rgba(0,255, 255, 0.2);
     padding: 0 4rem;
 }
 .header > .navigation > ul > li {
-    background-color: aqua;
     font-size: 2rem;
-    box-shadow: 5px 5px 25px rgba(80, 200, 189, 0.7);
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.7)
 }
 .header > .navigation > ul > li > a{
-    color: orange;
+    color: rgb(110, 147, 185)
 }
 .header > .navigation > ul > li > a:link, .header > .navigation > ul > li > a:visited{
     text-decoration: none;
@@ -100,7 +98,18 @@ body .footer{
 .card:hover{
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
 }
-
+.card > p{
+    font-size: 1.5rem;
+}
 .card > img {
     max-width: 30rem;
+}
+
+.card-img{
+    width: 30rem;
+    height: 20rem;
+}
+.prof-pic{
+    border-radius: 50%;
+    width: 45rem
 }
